Fixed the scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 
+
+
 :root {
     --primary-color: #008080; 
     --hover-color: #00a7a7; 
@@ -22,6 +24,7 @@
 }
 
 body {
+    overflow-y: scroll;
     font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', Helvetica, Arial, sans-serif;
 }
 
